--- a/error-404.html
+++ b/error-404.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
     
     <!-- PAGE TITLE HERE -->
-    <title>Dronza Template | Error 404</title>
+    <title>Uh oh! | Error 404</title>
     
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
