--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ But our drones will be by your side in a jiffy, with first aid supplies and medi
                                 <div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30 ">
                                     <div class="counter-box">
                                         <h2 class="counter" >45</h2>
-                                        <span class="site-text-primary title-style-2">Flight Time</span>
+                                        <span class="site-text-primary title-style-2">Flight Hours</span>
                                     </div>
                                 </div>
                                 
