--- a/about.html
+++ b/about.html
@@ -792,11 +792,11 @@ To carry small loads like oxygen cylinders, drug kit with essential drugs, blood
                             <div class="widget widget_services">
                                 <h3 class="widget-title">Useful links</h3>
                                 <ul>
-                                    <li><a href="about-1.html">About</a></li>
-                                    <li><a href="our-prices.html">Pricing Plan </a></li>
-                                    <li><a href="Faq.html">FAQ</a></li>
-                                    <li><a href="team-single.html">Our Team </a></li>
-                                    <li><a href="services-1.html">Services </a></li>
+                                    <li><a href="about.html" style="text-decoration: none;">About</a></li>
+                                    <li><a href="drones.html" style="text-decoration: none;">Drones</a></li>
+                                    <li><a href="team.html" style="text-decoration: none;">Our Team</a></li>
+                                    <li><a href="blog.html" style="text-decoration: none;">Blog </a></li>
+                                    <li><a href="contact.html" style="text-decoration: none;">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
