--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
                      <!-- <div class="extra-nav header-2-nav">
                          <div class="extra-cell">
                              <div class="header-search">
-                                 <a href="javascript:void(0);" class="header-search-icon"><i class="fa fa-search"></i></a>
+                                 <a href="javascript:void(0);" class="header-search-icon"><i class="fa fa-searh"></i></a>
                              </div>                                
                          </div>
                                            
