--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@ But our drones will be by your side in a jiffy, with first aid supplies and medi
                         </div>
 
 
-                        <div class="col-lg-4 col-md-6">
+                        <!-- <div class="col-lg-4 col-md-6">
                             <div class="widget widget_services">
                                 <h3 class="widget-title">Useful links</h3>
                                 <ul>
@@ -1162,7 +1162,7 @@ But our drones will be by your side in a jiffy, with first aid supplies and medi
                                     <li><a href="blog.html">Blog</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- <div class="col-lg-4 col-md-6">
 							<div class="widget recent-posts-entry">
