--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 
 	<!-- PAGE TITLE HERE -->
-	<title>Dronza Template | About Page 2</title>
+	<title>About Us - DronAid</title>
 
 	<!-- MOBILE SPECIFIC -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
