--- a/about.html
+++ b/about.html
@@ -895,9 +895,9 @@ To carry small loads like oxygen cylinders, drug kit with essential drugs, blood
                         </ul> -->
 
                         <ul class="social-icons  wt-social-links footer-social-icon">
-                            <li><a href="https://www.facebook.com/dronaid.care/" target="_blank" class="fa fa-facebook"></a></li>
-                            <li><a href="https://instagram.com/project.dronaid?igshid=YmMyMTA2M2Y=" target="_blank" class="fa fa-instagram"></a></li>
-                            <li><a href="https://www.linkedin.com/company/dronaid/" target="_blank" class="fa fa-linkedin"></a></li>
+                            <li><a href="https://www.facebook.com/dronaid.care/" target="_blank" class="fa fa-facebook" style="text-decoration: none;" ></a></li>
+                            <li><a href="https://instagram.com/project.dronaid?igshid=YmMyMTA2M2Y=" target="_blank" class="fa fa-instagram" style="text-decoration: none;" ></a></li>
+                            <li><a href="https://www.linkedin.com/company/dronaid/" target="_blank" class="fa fa-linkedin" style="text-decoration: none;" ></a></li>
                         </ul>
                     </div>
                 </div>
