--- a/team.html
+++ b/team.html
@@ -207,7 +207,7 @@
                                     <div class="wt-team-1">
                                         
                                         <div class="wt-media">
-                                            <img src="" alt="">
+                                            <img src="/images/team/shivam_TL.jpeg" alt="">
                                         </div>                                   
 
                                         <div class="wt-info">
