minor fixes+footer anchor

--- a/team.html
+++ b/team.html
@@ -211,7 +211,7 @@
                                         </div>                                   
 
                                         <div class="wt-info">
-                                            <div class="team-detail p-t30">
+                                            <div id="jump-to" class="team-detail p-t30">
                                                 <span class="title-style-2 team-position site-text-primary">2022-2023</span>                                        
                                                 <h3 class="m-t0 team-name">Shivam</h3>
                                             </div>
@@ -2210,7 +2210,7 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="wt-footer-bot-left d-flex justify-content-center">
-                        <span class="copyrights-text">© 2022 Project DronAid. Designed By <span class="site-text-primary">DronAid Web Team</span></span>
+                        <span class="copyrights-text">© 2022 Project DronAid. Designed By <a href="team.html#jump-to" style="text-decoration: none;"><span class="site-text-primary">DronAid Web Team</span></a></span>
                     </div>
                 </div>
             </div>
