--- a/about.html
+++ b/about.html
@@ -906,7 +906,7 @@ To carry small loads like oxygen cylinders, drug kit with essential drugs, blood
             <div class="footer-bottom">
                 <div class="container">
                     <div class="wt-footer-bot-left d-flex justify-content-center">
-                        <span class="copyrights-text">© 2022 Project DronAid. Designed By <span class="site-text-primary">DronAid Web Team</span></span>
+                        <span class="copyrights-text">© 2022 Project DronAid. Designed By <a href="team.html#jump-to" style="text-decoration: none;"><span class="site-text-primary">DronAid Web Team</span></a></span>
                     </div>
                 </div>
             </div>
