--- a/team.html
+++ b/team.html
@@ -162,7 +162,7 @@
             <!-- INNER PAGE BANNER END -->
                     
             <!-- INNER SECTION HEADER START-->
-                <div class="d-flex justify-content-center">
+<!--                 <div class="d-flex justify-content-center">
                     <ul id="inner-section-container" class="inner-section-header">
                         <li class="year-btn">
                             <a href="#" onclick="show_team20_21()">2020-21</a>      
@@ -180,7 +180,7 @@
                         </li>                             
                    
                     </ul>
-                </div>
+                </div> -->
             <!-- INNER SECTION HEADER END-->
 
             <!--ALL TEAM CARDS START-->
