--- a/team.html
+++ b/team.html
@@ -806,7 +806,7 @@
                                     <div class="wt-team-2">
                                         
                                         <div class="wt-media">
-                                            <img src="/images/team/Akshay Singh_22_23_AI.jpg" alt="">
+                                            <img src="/images/team/Akshay Singh_22_23_AI.jpg" style="height:450px;">
                                         </div>                                   
 
                                         <div class="wt-info">
