--- a/index.html
+++ b/index.html
@@ -927,11 +927,11 @@ But our drones will be by your side in a jiffy, with first aid supplies and medi
               
 
             <!-- TESTIMONIAL SECTION START -->
-            <div class="section-full  p-t80 p-b50 testimonial-1-outer bg-cover bg-center bg-image-moving" style="background-image:url(images/background/bg-2.jpg)">
+            <!-- <div class="section-full  p-t80 p-b50 testimonial-1-outer bg-cover bg-center bg-image-moving" style="background-image:url(images/background/bg-2.jpg)">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5 col-md-12">
-                            <!-- TITLE START-->
+                            <!-- TITLE START->
                             <div class="left wt-small-separator-outer text-white">
                                 <div class="wt-small-separator">
                                     <div  class="sep-leaf-left"></div>
@@ -940,7 +940,7 @@ But our drones will be by your side in a jiffy, with first aid supplies and medi
                                 </div>
                                 <h2>What Some People Say About Us.</h2>
                             </div>
-                            <!-- TITLE END-->                        
+                            <!-- TITLE END->                        
                         </div>
                    </div>
 
@@ -1074,7 +1074,7 @@ But our drones will be by your side in a jiffy, with first aid supplies and medi
                     </div>
 
 				</div>                
-            </div>
+            </div> -->
             <!-- TESTIMONIAL SECTION END -->
        
             <!-- CLIENT LOGO SECTION START -->
