fixed team hover

--- a/team.html
+++ b/team.html
@@ -266,8 +266,8 @@
                                             </div>
                                             <div class="team-social-center">
                                                 <ul class="team-social-bar">
-                                                    <li><a href="javascript:void(0);">Read More About Anmol</a></li>
-                                                    <li><a href="javascript:void(0);">Linkedin</a></li>
+                                                    <li><a href="https://www.linkedin.com/in/anmolgarg404">Linkedin</a></li>
+                                                    <li><a href="https://github.com/anmolgxrg">Github</a></li>
                                                 </ul>
                                             </div>                                        
                                         </div>
@@ -289,8 +289,8 @@
                                             </div>
                                             <div class="team-social-center">
                                                 <ul class="team-social-bar">
-                                                    <li><a href="javascript:void(0);">Github</a></li>
-                                                    <li><a href="javascript:void(0);">Linkedin</a></li>
+                                                    <li><a href="https://github.com/utkarsh-T19">Github</a></li>
+                                                    <li><a href="https://www.linkedin.com/in/utkarsh-tawakley/">Linkedin</a></li>
                                                 </ul>
                                             </div>                                        
                                         </div>
