implement handling using js and json

--- a/apply.html
+++ b/apply.html
@@ -183,104 +183,101 @@
 
                                 </div>
 
-                                <div class="col-lg-8 col-md-8 m-b30">
+                                <div>
                                     <div class="wt-team-1-single">
-                                        <form class="cons-contact-form" method="post" action="https://vebcor.com/dronaid/applyhandler.php">
+
+                                        <form class="cons-contact-form" method="post" action="https://vebcor.com/dronaid/applyhandler.php" id="aform">
                                             <!-- TITLE START -->
                                             <div class="section-head left wt-small-separator-outer">
-                                                <h3>Recruitment Form</h3>
+                                              <h3>Recruitment Form</h3>
                                             </div>
                                             <!-- TITLE END -->
-
+  
                                             <div class="row">
-                                                <div class="col-lg-12 col-md-12">
-                                                    <div class="form-group">
-                                                        <input name="name" type="text" required class="form-control"
-                                                            placeholder="Name">
-                                                    </div>
+                                              <div class="col-lg-12 col-md-12">
+                                                <div class="form-group">
+                                                  <input name="name" type="text" required class="form-control" placeholder="Name">
                                                 </div>
-
-                                                <!-- <div class="col-lg-12 col-md-12">
-                                                    <div class="form-group">
-                                                        <input name="email" type="text" class="form-control" required
-                                                            placeholder="Email">
-                                                    </div>
-                                                </div> -->
-
-                                                <div class="col-lg-12 col-md-12">
-                                                    <div class="form-group">
-                                                        <input name="regno" type="text" class="form-control" required
-                                                            placeholder="Registration Number">
-                                                    </div>
+                                              </div>
+  
+                                              <!-- <div class="col-lg-12 col-md-12">
+                                                      <div class="form-group">
+                                                          <input name="email" type="text" class="form-control" required
+                                                              placeholder="Email">
+                                                      </div>
+                                                  </div> -->
+  
+                                              <div class="col-lg-12 col-md-12">
+                                                <div class="form-group">
+                                                  <input name="regno" type="text" class="form-control" required placeholder="Registration Number">
                                                 </div>
-
-                                                <div class="col-lg-12 col-md-12">
-                                                    <div class="form-group">
-                                                        <input name="branch" type="text" required class="form-control"
-                                                            placeholder="Branch">
-                                                    </div>
+                                              </div>
+  
+                                              <div class="col-lg-12 col-md-12">
+                                                <div class="form-group">
+                                                  <input name="branch" type="text" required class="form-control" placeholder="Branch">
                                                 </div>
-
-
-
-                                                <div class="col-lg-12 col-md-12">
-                                                    <div class="form-group">
-                                                        <input name="phone" type="text" class="form-control" required
-                                                            placeholder="Contact Number (WhatsApp)">
-                                                    </div>
+                                              </div>
+  
+  
+  
+                                              <div class="col-lg-12 col-md-12">
+                                                <div class="form-group">
+                                                  <input name="phone" type="text" class="form-control" required placeholder="Contact Number (WhatsApp)">
                                                 </div>
-
-
-                                                <div class="col-md-12 col-lg-12">
-                                                    <div class="form-group">
-                                                        <p>Subsystem preference 1</p>
-                                                        <select name="pref1" class="form-control" style="border: 0; border-radius:3.5px;">
-                                                            <option value="dfm">DFM</option>
-                                                            <option value="os">OS/IOT</option>
-                                                            <option value="app">APP DEV</option>
-                                                            <option value="web">WEB DEV</option>
-                                                            <option value="ai">AI/Automation</option>
-                                                            <option value="management">MANAGEMENT</option>
-                                                        </select>
-                                                    </div>
+                                              </div>
+  
+  
+                                              <div class="col-md-12 col-lg-12">
+                                                <div class="form-group">
+                                                  <p>Subsystem preference 1</p>
+                                                  <select name="pref" class="form-control" style="border: 0; border-radius:3.5px;">
+                                                    <option value="dfm">DFM</option>
+                                                    <option value="os">OS/IOT</option>
+                                                    <option value="app">APP DEV</option>
+                                                    <option value="web">WEB DEV</option>
+                                                    <option value="ai">AI/Automation</option>
+                                                    <option value="management">MANAGEMENT</option>
+                                                  </select>
                                                 </div>
-
-                                                <div class="col-md-12 col-lg-12">
-                                                    <div class="form-group">
-                                                        <p>Subsystem preference 2</p>
-                                                        <select name="pref2" class="form-control" style="border: 0; border-radius:3.5px;">
-                                                            <option value="dfm">DFM</option>
-                                                            <option value="os">OS/IOT</option>
-                                                            <option value="app">APP DEV</option>
-                                                            <option value="web">WEB DEV</option>
-                                                            <option value="ai">AI/Automation</option>
-                                                            <option value="management">MANAGEMENT</option>
-                                                        </select>
-                                                    </div>
+                                              </div>
+  
+                                              <div class="col-md-12 col-lg-12">
+                                                <div class="form-group">
+                                                  <p>Subsystem preference 2</p>
+                                                  <select name="pref" class="form-control" style="border: 0; border-radius:3.5px;">
+                                                    <option value="dfm">DFM</option>
+                                                    <option value="os">OS/IOT</option>
+                                                    <option value="app">APP DEV</option>
+                                                    <option value="web">WEB DEV</option>
+                                                    <option value="ai">AI/Automation</option>
+                                                    <option value="management">MANAGEMENT</option>
+                                                  </select>
                                                 </div>
-
-                                                <div class="col-md-12 col-lg-12">
-                                                    <div class="form-group">
-                                                        <p>Subsystem preference 3</p>
-                                                        <select name="pref3" class="form-control" style="border: 0; border-radius:3.5px;">
-                                                            <option value="dfm">DFM</option>
-                                                            <option value="os">OS/IOT</option>
-                                                            <option value="app">APP DEV</option>
-                                                            <option value="web">WEB DEV</option>
-                                                            <option value="ai">AI/Automation</option>
-                                                            <option value="management">MANAGEMENT</option>
-                                                        </select>
-                                                    </div>
+                                              </div>
+  
+                                              <div class="col-md-12 col-lg-12">
+                                                <div class="form-group">
+                                                  <p>Subsystem preference 3</p>
+                                                  <select name="pref" class="form-control" style="border: 0; border-radius:3.5px;">
+                                                    <option value="dfm">DFM</option>
+                                                    <option value="os">OS/IOT</option>
+                                                    <option value="app">APP DEV</option>
+                                                    <option value="web">WEB DEV</option>
+                                                    <option value="ai">AI/Automation</option>
+                                                    <option value="management">MANAGEMENT</option>
+                                                  </select>
                                                 </div>
-
-
-                                                <div class="col-md-12">
-                                                    <button type="submit" class="site-button site-btn-effect">Submit
-                                                        Now</button>
-                                                </div>
-
+                                              </div>
+  
+  
+                                              <div class="col-md-12">
+                                                <button type="submit" class="site-button site-btn-effect">Submit Now</button>
+                                              </div>
+  
                                             </div>
-                                        </form>
+                                          </form>
+  
 
                                     </div>
                                 </div>
