--- a/about.html
+++ b/about.html
@@ -458,7 +458,7 @@ To carry small loads like oxygen cylinders, drug kit with essential drugs, blood
                                     <div></div>
                                     <div  class="sep-leaf-right"></div>
                                 </div>
-                                <h2 style="color:blue;">Other Applications:</h2>
+                                <h2 style="color:white;">Other Applications:</h2>
                             </div>
                             <!-- TITLE END-->                            
 
